add method register for backend and frontend
